Fix background properties for body in style.css

--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,8 @@
 }
 body{
     background: url("../assets/bg.png");
+    background-attachment: fixed;
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
