--- a/styles/style.css
+++ b/styles/style.css
@@ -3,13 +3,14 @@
     padding: 0;
     box-sizing: border-box;
 }
-body{
+.main-container{
     background: url("../assets/bg.png");
-    background-attachment: fixed;
+    min-height: 100vh; 
+    width: 100%;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
-    min-height: 100vh;
+    background-attachment: fixed;
 }
 header{
     display: flex;
